Volley access to api

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,6 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="BonAppTheme" parent="@style/AppTheme" />
+
 </resources>
