--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
 
     <item
         android:id="@+id/itemUserID"
-        android:icon="@drawable/user"
+        android:icon="@drawable/ic_face_black_48dp"
         android:title="@string/account"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"/>
 </menu>
