--- a/app/src/main/res/menu/recipemenu.xml
+++ b/app/src/main/res/menu/recipemenu.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/itemFavorisID"
-        android:icon="@drawable/favoris"
-        android:title="@string/favorisTitleID"
-        app:showAsAction="never"/>
+<item
+    android:id="@+id/itemFavorisID"
+    android:icon="@drawable/ic_favorite_black_48dp"
+    android:title="@string/favorisTitleID"
+    app:showAsAction="ifRoom"/>
 
-    <item
-        android:id="@+id/itemUserID"
-        android:icon="@drawable/user"
-        android:title="@string/account"
-        app:showAsAction="never"/>
+<item
+    android:id="@+id/itemUserID"
+    android:icon="@drawable/ic_face_black_48dp"
+    android:title="@string/account"
+    app:showAsAction="ifRoom"/>
 </menu>
